code/istio/spring-cloud-gateway/dog-dp-without-env-pass-through.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dog-dp
  annotations:
    author: catface996
spec:
  selector:
    matchLabels:
      app: dog
      version: prod
  replicas: 1
  template:
    metadata:
      labels:
        app: dog
        version: prod
    spec:
      containers:
        - name: dog-ct
          image: catface996/spring-cloud-istio-demo:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "200m"
              memory: "1024Mi"
